--- a/index.html
+++ b/index.html
@@ -13,15 +13,43 @@
 		
 		<div class="nav-bar">
 			<nav>
-				<a class="nav-style" href="/Home/">Home</a>
-				<a class="nav-style" href="/About Us/">About Us</a>
-				<a class="nav-style" href="/Composition/">Composition</a>
-				<a class="nav-style" href="/Key Answers/">Key Answers</a>
-				<a class="nav-style" href="/Act & Rules/">Act & Rules</a>
-				<a class="nav-style" href="/Section of KPSC/">Section of KPSC</a>
-				<a class="nav-style" href="/Lists/">Lists</a>
-				<a class="nav-style" href="/RTI/">RTI</a>
-				<a class="nav-style" href="/Contact Us/">Contact Us</a>
+				<div class="topnav" id="myTopnav">
+					<a href="#home" class="active">Home</a>
+					<a href="#news">News</a>
+					<a href="#contact">Contact</a>
+					<div class="dropdown">
+					  <button class="dropbtn">Dropdown1 
+						<i class="fa fa-caret-down"></i>
+					  </button>
+					  <div class="dropdown-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					  </div>
+					</div> 
+					<div class="dropdown">
+						<button class="dropbtn">Dropdown2 
+						  <i class="fa fa-caret-down"></i>
+						</button>
+						<div class="dropdown-content">
+						  <a href="#">Link 1</a>
+						  <a href="#">Link 2</a>
+						  <a href="#">Link 3</a>
+						</div>
+					  </div> 
+					  <div class="dropdown">
+						<button class="dropbtn">Dropdown3
+						  <i class="fa fa-caret-down"></i>
+						</button>
+						<div class="dropdown-content">
+						  <a href="#">Link 1</a>
+						  <a href="#">Link 2</a>
+						  <a href="#">Link 3</a>
+						</div>
+					  </div> 
+					<a href="#about">About</a>
+					<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+				  </div>
 			</nav>
 		</div>
 		
