--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 </head>
 <body>
 	<div class="root">
-		<div class="header">
-			<img class="logo" src="./images/logo.png" alt="KPSC LOGO">
-			<h1 class="title">Karnataka Public Sevice Commission</h1>
-		</div>
+		<h1 class="testclass">Git Test</h1>
+		
 		
 		<div class="nav-bar">
 			<nav>
